# NodeWeaver

./: .env.example  .gitignore  .replit  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LEARNING_MECHANISMS.md  LICENSE  README.md  SECURITY.md  SYSTEM_GAPS_ANALYSIS.md  VERSION.md  __init__.py  app.py  config.py  conftest.py  docker-compose.yml  init.sql  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  setup-hooks.cmd  setup-hooks.sh
.githooks/: post-merge  pre-commit
api/: audio.py  classifier.py  topics.py
attached_assets/: Pasted-For-a-Retrieval-Augmented-Generation-RAG-system-where-scalability-and-speed-are-essential--1754332696031_1754332696031.txt  Pasted-I-ll-help-you-build-a-complete-RAG-system-with-topic-emergence-Here-s-a-ready-to-run-implementation-1754332704927_1754332704927.txt  Pasted-That-s-a-compelling-and-scalable-vision-treating-topics-as-emergent-from-weighted-node-convergence--1754332686438_1754332686439.txt
docs/: BRANDING.md  CUTOVER_RUNBOOK.md  DEPLOYMENT_MIGRATION_PLAN.md  NEXT_SETUP_BLUEPRINT.md
integration/: README.md  axtask_client.py  docker-compose.nodeweaver.yml  google_apps_script.js  nodeweaver-client.ts
scripts/: check_no_axios.py  post-merge.sh  sync_dependencies.py
services/: audio_processor.py  audio_processor_simple.py  classification_pipeline.py  embeddings.py  embeddings_simple.py  rag_engine.py  rag_engine_simple.py  topic_detector.py
templates/: api_docs.html  base.html  index.html  live_audio.html  test_interface.html
(+10 files in other folders)
