[project]
name = "repl-nix-workspace"
version = "1.0.3"
description = "NodeWeaver - An intelligent RAG classifier API for automatic task categorization with audio processing capabilities"
authors = [
    {name = "AxTask Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
keywords = ["rag", "classifier", "api", "nlp", "audio", "topic-detection", "flask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "librosa",
    "numpy",
    "pgvector",
    "psycopg2-binary>=2.9.10",
    "pyaudio",
    "pydub",
    "pytest>=9.0.3",
    "scikit-learn",
    "sentence-transformers",
    "speechrecognition",
    "sqlalchemy>=2.0.42",
    "webrtcvad",
    "werkzeug>=3.1.3",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
